# dimgui

./: .gitignore  .gitmodules  README.md  build.ts  deno.jsonc  ffi.ts  gen_binding.ts  imgui.ini  mod.ts  test_dwm_window.ts  test_self_window.ts
draft/: call_draft.txt  font_atlas-draft.txt  font_atlas.txt  input_text_callback_data-draft.txt  input_text_callback_data.txt  io-draft.txt  io.txt  style-draft.txt  style.txt
imgui/: CMakeLists.txt  dim_config.cpp  dim_config.h  dimgui_style.cpp  log.cpp
imgui/src/: dimgui_font_atlas.cpp  dimgui_input_text_callback_data.cpp  dimgui_io.cpp  dimgui_style.cpp
script/: build.ts  convention.ts  gen_binding.ts  version.ts
src/: call.ts  callback.ts  demo.ts  enum.ts  ffi.ts  imgui_font_atlas.ts  imgui_input_text_callback_data.ts  imgui_io.ts  imgui_style.ts  mod.ts  type.ts
symbol/: call_draft.ts  cimgui.ts  dimgui_font_atlas.ts  dimgui_input_text_callback_data.ts  dimgui_io.ts  dimgui_style.ts  glfw.ts  imgui_backend.ts
test/: test_demo.ts  test_dwm_window.ts  test_example.ts  test_self_window.ts  test_widget.ts
